# softbackup

./: .env  .gitignore  README.md  docker-compose.yml  regen-env.sh
agent_deploy/: install.sh
backend/: .env  (+5 more)
core/: CMakeLists.txt  Dockerfile  Dockerfile.windows  build-windows.sh  config.example.json  vovqa-agent.service
core/cmake/: build-deps-local.sh  build-deps.sh  mingw-w64-i686.cmake  mingw-w64-x86_64.cmake
core/include/: common.h
core/include/agent/: agent.h  agent_factory.h  command_handler.h  esxi_agent.h  exchange_agent.h  generic_agent.h  hyperv_agent.h  i_agent.h  kubernetes_agent.h  linux_fs_agent.h  mssql_agent.h  ndmp_agent.h  oracle_agent.h  postgresql_agent.h  proxmox_agent.h  saphana_agent.h  windows_fs_agent.h
core/include/antivirus/: av_scanner.h
core/include/backup_copy/: backup_copy_job.h
core/include/backup_engine/: anti_ransomware.h  backup_job.h  cbt.h  db_backup.h  dirty_buffer_logger.h  dirty_buffer_manager.h  integrity_checker.h  platform_flusher.h  replication.h  restore_engine.h
core/include/backup_engine/incremental/: oracle_backup.h  s3_backup.h
core/include/block_device/: block_reader.h
core/include/cdp/: cdp_engine.h
core/include/crypto/: crypto_engine.h
core/include/data_mover/: data_mover.h  tcp_stream.h
core/include/dbms/: database_adapter.h  mongodb_1c_adapters.h  mssql_adapter.h  mysql_adapter.h  oracle_adapter.h  other_dbms_adapters.h  postgres_adapter.h
core/include/dedup/: dedup_engine.h
core/include/dr/: dr_orchestrator.h
core/include/engine/: backup_pipeline.h  engine_factory.h  i_backup_engine.h  i_cdp_engine.h  i_compression.h  i_crypto_engine.h  i_dedup_engine.h  i_transport.h
core/include/fast_clone/: fast_clone.h
core/include/framework/: application.h  command.h  component.h  event_bus.h  service_registry.h
core/include/ha/: ha_cluster.h
core/include/immutability/: object_lock.h
core/include/incremental/common/: bitmap_manager.h  incremental_engine.h
core/include/incremental/hyperv/: hyperv_backup.h
core/include/incremental/linux/: linux_fs_backup.h
core/include/incremental/proxmox/: proxmox_backup.h
core/include/incremental/vmware/: vmware_backup.h
core/include/incremental/window/: windows_fs_backup.h
core/include/ipc/: i_ipc_server.h  ipc_server.h  message_handler.h  message_router.h  named_pipe_server.h  unix_socket_server.h
core/include/k8s/: k8s_backup.h
core/include/mail/: mail_adapter.h
core/include/malware/: malware_scan.h
core/include/ndmp/: ndmp_backup.h
core/include/os_backup/: os_storage_adapters.h
core/include/replication/: remote_replication.h
core/include/replication_v2/: vm_replication.h
core/include/rescue/: rescue_image.h
core/include/restore/: cross_platform_restore.h
core/include/sap_ora/: sap_backup.h
core/include/scaleout/: scaleout_repository.h
core/include/storage/: multi_tier_storage.h  tape_library.h
core/include/storage_snapshot/: storage_snapshot_backup.h
core/include/storage_tier/: tier_manager.h
core/include/tape/: tape_library.h
core/include/tape_lib/: tape_engine.h
core/include/traffic_optimizer/: traffic_optimizer.h
core/include/verification/: vm_verification.h
core/include/verify/: surebackup_engine.h
core/include/virtualization/: hyperv_adapter.h  proxmox_adapter.h  russian_adapters.h  virtual_machine.h  vm_manager.h  vmware_adapter.h
core/src/: main.cpp
core/src/agent/: agent_main.cpp  esxi_agent.cpp  exchange_agent.cpp  generic_agent.cpp  hyperv_agent.cpp  kubernetes_agent.cpp  linux_fs_agent.cpp  mssql_agent.cpp  ndmp_agent.cpp  oracle_agent.cpp  postgresql_agent.cpp  proxmox_agent.cpp  saphana_agent.cpp  windows_fs_agent.cpp
core/src/antivirus/: av_scanner.cpp
core/src/backup_copy/: backup_copy_job.cpp
core/src/backup_engine/: anti_ransomware.cpp  backup_job.cpp  cbt.cpp  db_backup.cpp  dirty_buffer_logger.cpp  dirty_buffer_manager.cpp  integrity_checker.cpp  replication.cpp  restore_engine.cpp
core/src/backup_engine/incremental/: oracle_backup.cpp  s3_backup.cpp
core/src/block_device/: block_reader.cpp
core/src/cdp/: cdp_engine.cpp
core/src/crypto/: crypto_engine.cpp
core/src/data_mover/: data_mover.cpp  tcp_stream.cpp
core/src/dbms/: mongodb_1c_adapters.cpp  mssql_adapter.cpp  mysql_adapter.cpp  oracle_adapter.cpp  other_dbms_adapters.cpp  postgres_adapter.cpp
core/src/dedup/: dedup_engine.cpp
core/src/dr/: dr_orchestrator.cpp
core/src/engine/: backup_pipeline.cpp  engine_factory.cpp
core/src/fast_clone/: fast_clone.cpp
core/src/framework/: application.cpp
core/src/ha/: ha_cluster.cpp
core/src/immutability/: object_lock.cpp
core/src/incremental/common/: bitmap_manager.cpp  chain_management.cpp  incremental_engine.cpp
core/src/incremental/hyperv/: hyperv_backup.cpp
core/src/incremental/linux/: linux_fs_backup.cpp
core/src/incremental/proxmox/: proxmox_backup.cpp
core/src/ipc/: message_handler.cpp  message_router.cpp  named_pipe_server.cpp  unix_socket_server.cpp
core/src/k8s/: k8s_backup.cpp
core/src/mail/: mail_adapter.cpp
core/src/malware/: malware_scan.cpp
core/src/ndmp/: ndmp_backup.cpp
core/src/os_backup/: os_storage_adapters.cpp
core/src/replication/: remote_replication.cpp
core/src/replication_v2/: vm_replication.cpp
core/src/rescue/: rescue_image.cpp
core/src/restore/: cross_platform_restore.cpp
core/src/sap_ora/: sap_backup.cpp
core/src/scaleout/: scaleout_repository.cpp
core/src/storage/: multi_tier_storage.cpp  tape_library.cpp
core/src/storage_snapshot/: storage_snapshot_backup.cpp
core/src/storage_tier/: tier_manager.cpp
core/src/tape/: tape_library.cpp
core/src/tape_lib/: tape_engine.cpp
core/src/traffic_optimizer/: traffic_optimizer.cpp
core/src/verification/: vm_verification.cpp
core/src/verify/: surebackup_engine.cpp
core/src/virtualization/: hyperv_adapter.cpp  proxmox_adapter.cpp  russian_adapters.cpp  vm_manager.cpp  vmware_adapter.cpp
core/tests/: test_crypto.cpp  test_dedup.cpp  test_dirty_buffer.cpp  test_esxi_agent.cpp  test_ipc.cpp  test_mssql_agent.cpp  test_oop.cpp  test_pgsql_agent.cpp
(+160 files in other folders)
